# ml-portfolio

./: README.md  app.py  hello.py  pyproject.toml  requirements.txt
machine_prediction/: .gitignore  machine_predict.ipynb
notebooks/: machine_predict.ipynb
